add color to quota-report.html

--- a/reporting/quota-report.html
+++ b/reporting/quota-report.html
@@ -7,8 +7,8 @@
   <body>
     <h2> <span style="font-family:verdana,geneva,sans-serif;">Quota
         warning from #HOSTNAME#</span></h2>
-    <p> The ZFS folder <big><big><b>#ZFS_FOLDER#</b></big></big> has
-      triggered a quota warning:</p>
+    <p> The ZFS folder <font color="#ff0000"><big><big><b>#ZFS_FOLDER#</b></big></big></font>
+      has triggered a quota warning:</p>
     <p> #REFQUOTA_TRIGGER#<br>
       #QUOTA_TRIGGER#<br>
       #SIZE_TRIGGER#</p>
@@ -77,7 +77,7 @@
         </tr>
         <tr>
           <td><font face="Arial Rounded MT">Available</font></td>
-          <td><font face="Arial Rounded MT"><big><big>#AVAILABLE#</big></big></font></td>
+          <td><font color="#ff0000" face="Arial Rounded MT"><big><big>#AVAILABLE#</big></big></font></td>
         </tr>
       </tbody>
     </table>
