Clean formatting of quota-reports.html

--- a/reporting/quota-report.html
+++ b/reporting/quota-report.html
@@ -9,10 +9,7 @@
         warning from #HOSTNAME#</span></h2>
     <p> The ZFS folder <font color="#ff0000"><big><big><b>#ZFS_FOLDER#</b></big></big></font>
       has triggered a quota warning:</p>
-    <p> #REFQUOTA_TRIGGER#<br>
-      #QUOTA_TRIGGER#<br>
-      #SIZE_TRIGGER#</p>
-    <p> </p>
+    <p>#REFQUOTA_TRIGGER# #QUOTA_TRIGGER# #SIZE_TRIGGER# </p>
     <table style="width: 500px;" cellpadding="1" cellspacing="1"
       border="0">
       <tbody>
@@ -30,6 +27,7 @@
               Used&nbsp; <br>
             </font> </td>
           <td bgcolor="#33ccff"><font face="Arial Rounded MT">#LOGICALUSED#
+
               <br>
             </font> </td>
         </tr>
