Tweek fonts quota-report.html

--- a/reporting/quota-report.html
+++ b/reporting/quota-report.html
@@ -10,71 +10,61 @@
     <p> The ZFS folder <font color="#ff0000"><big><big><b>#ZFS_FOLDER#</b></big></big></font>
       has triggered a quota warning:</p>
     <p>#REFQUOTA_TRIGGER# #QUOTA_TRIGGER# #SIZE_TRIGGER# </p>
-    <table style="width: 500px;" cellpadding="1" cellspacing="1"
-      border="0">
+    <table style="font-family:verdana,geneva,sans-serif;" "width:=""
+      500px;"="" cellpadding="1" cellspacing="1" border="0">
       <tbody>
         <tr>
-          <td bgcolor="#33ccff"><font face="Arial Rounded MT">Referenced</font></td>
-          <td bgcolor="#33ccff"><font face="Arial Rounded MT">#REFERENCED#</font></td>
+          <td bgcolor="#33ccff">Referenced</td>
+          <td bgcolor="#33ccff">#REFERENCED#</td>
         </tr>
         <tr>
-          <td><font face="Arial Rounded MT">Referenced Quota<br>
-            </font> </td>
-          <td><font face="Arial Rounded MT">#REF_QUOTA#</font></td>
+          <td>Referenced Quota<br>
+          </td>
+          <td>#REF_QUOTA#</td>
         </tr>
         <tr>
-          <td bgcolor="#33ccff"><font face="Arial Rounded MT">Logical
-              Used&nbsp; <br>
-            </font> </td>
-          <td bgcolor="#33ccff"><font face="Arial Rounded MT">#LOGICALUSED#
-
-              <br>
-            </font> </td>
+          <td bgcolor="#33ccff">Logical Used&nbsp; <br>
+          </td>
+          <td bgcolor="#33ccff">#LOGICALUSED# <br>
+          </td>
         </tr>
         <tr>
-          <td valign="top"><font face="Arial Rounded MT">Logical
-              Referenced<br>
-            </font></td>
-          <td valign="top"><font face="Arial Rounded MT">#LOGICALREFERENCED#<br>
-            </font></td>
+          <td valign="top">Logical Referenced<br>
+          </td>
+          <td valign="top">#LOGICALREFERENCED#<br>
+          </td>
         </tr>
         <tr>
-          <td bgcolor="#33ccff"><font face="Arial Rounded MT">Used by
-              folder and subfolders<br>
-            </font> </td>
-          <td bgcolor="#33ccff"><font face="Arial Rounded MT">#USED#</font></td>
+          <td bgcolor="#33ccff">Used by folder and subfolders<br>
+          </td>
+          <td bgcolor="#33ccff">#USED#</td>
         </tr>
         <tr>
-          <td valign="top"><font face="Arial Rounded MT">Used by data
-              set in folder<br>
-            </font> </td>
-          <td valign="top"><font face="Arial Rounded MT">#USED_DS#<br>
-            </font> </td>
+          <td valign="top">Used by data set in folder<br>
+          </td>
+          <td valign="top">#USED_DS#<br>
+          </td>
         </tr>
         <tr>
-          <td bgcolor="#33ccff" valign="top"><font face="Arial Rounded
-              MT">Used by snapshots<br>
-            </font> </td>
-          <td bgcolor="#33ccff" valign="top"><font face="Arial Rounded
-              MT">#USED_SNAP#<br>
-            </font> </td>
+          <td bgcolor="#33ccff" valign="top">Used by snapshots<br>
+          </td>
+          <td bgcolor="#33ccff" valign="top">#USED_SNAP#<br>
+          </td>
         </tr>
         <tr>
-          <td valign="top"><font face="Arial Rounded MT">Compression<br>
-            </font></td>
-          <td valign="top"><font face="Arial Rounded MT">#COMPRESSION#<br>
-            </font></td>
+          <td valign="top">Compression<br>
+          </td>
+          <td valign="top">#COMPRESSION#<br>
+          </td>
         </tr>
         <tr>
-          <td bgcolor="#33ccff" valign="top"><font face="Arial Rounded
-              MT">Compression Ratio<br>
-            </font></td>
-          <td bgcolor="#33ccff" valign="top"><font face="Arial Rounded
-              MT">#COMPRESSRATIO#<br>
-            </font></td>
+          <td bgcolor="#33ccff" valign="top">Compression Ratio<br>
+          </td>
+          <td bgcolor="#33ccff" valign="top">#COMPRESSRATIO#<br>
+          </td>
         </tr>
         <tr>
-          <td><font face="Arial Rounded MT">Available</font></td>
+          <td>Available</td>
           <td><font color="#ff0000" face="Arial Rounded MT"><big><big>#AVAILABLE#</big></big></font></td>
         </tr>
       </tbody>
