--- a/reporting/quota-report.html
+++ b/reporting/quota-report.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>HTML Online Editor Sample</title>
+    <title>zfs-tools quota report</title>
   </head>
   <body>
     <h2> <span style="font-family:verdana,geneva,sans-serif;">Quota
