add alert type to quota-report.html

--- a/reporting/quota-report.html
+++ b/reporting/quota-report.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>zfs-tools quota report</title>
+    <title>HTML Online Editor Sample</title>
   </head>
   <body>
     <h2> <span style="font-family:verdana,geneva,sans-serif;">Quota
-        warning from #HOSTNAME#</span></h2>
+        #ALERT_TYPE# from #HOSTNAME#</span></h2>
     <p> The ZFS folder <font color="#ff0000"><big><big><b>#ZFS_FOLDER#</b></big></big></font>
       has triggered a quota warning:</p>
     <p>#REFQUOTA_TRIGGER# #QUOTA_TRIGGER# #SIZE_TRIGGER# </p>
