Add missing quota to quota-report.html

--- a/reporting/quota-report.html
+++ b/reporting/quota-report.html
@@ -40,32 +40,38 @@
           <td bgcolor="#33ccff">#USED#</td>
         </tr>
         <tr>
-          <td valign="top">Used by data set in folder<br>
+          <td valign="top">Folder Quota<br>
           </td>
-          <td valign="top">#USED_DS#<br>
-          </td>
-        </tr>
-        <tr>
-          <td bgcolor="#33ccff" valign="top">Used by snapshots<br>
-          </td>
-          <td bgcolor="#33ccff" valign="top">#USED_SNAP#<br>
+          <td valign="top">#QUOTA#<br>
           </td>
         </tr>
         <tr>
-          <td valign="top">Compression<br>
+          <td bgcolor="#33ccff" valign="top">Used by data set in folder<br>
           </td>
-          <td valign="top">#COMPRESSION#<br>
-          </td>
-        </tr>
-        <tr>
-          <td bgcolor="#33ccff" valign="top">Compression Ratio<br>
-          </td>
-          <td bgcolor="#33ccff" valign="top">#COMPRESSRATIO#<br>
+          <td bgcolor="#33ccff" valign="top">#USED_DS#<br>
           </td>
         </tr>
         <tr>
-          <td>Available</td>
-          <td><font color="#ff0000" face="Arial Rounded MT"><big><big>#AVAILABLE#</big></big></font></td>
+          <td valign="top">Used by snapshots<br>
+          </td>
+          <td valign="top">#USED_SNAP#<br>
+          </td>
+        </tr>
+        <tr>
+          <td bgcolor="#33ccff" valign="top">Compression<br>
+          </td>
+          <td bgcolor="#33ccff" valign="top">#COMPRESSION#<br>
+          </td>
+        </tr>
+        <tr>
+          <td valign="top">Compression Ratio<br>
+          </td>
+          <td valign="top">#COMPRESSRATIO#<br>
+          </td>
+        </tr>
+        <tr>
+          <td bgcolor="#33ccff">Available</td>
+          <td bgcolor="#33ccff"><font color="#ff0000"><big><big>#AVAILABLE#</big></big></font></td>
         </tr>
       </tbody>
     </table>
