Add comment to quota report template.   Update report function for better console behavior.

--- a/reporting/quota-report.html
+++ b/reporting/quota-report.html
@@ -75,5 +75,6 @@
         </tr>
       </tbody>
     </table>
+    <p> Note: If a referenced quota or folder quota are 0, they are not defined and not enforced. </p>
   </body>
 </html>
