--- a/reporting/usage-report/header.html
+++ b/reporting/usage-report/header.html
@@ -3,7 +3,12 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>ZFS Usage Report</title>
+    <style>
+        th, td {
+            padding: 10px;
+        }
+    </style>
   </head>
   <body>
-    <h2> <span style="font-family:verdana,geneva,sans-serif;">Quota
+    <h2> <span style="font-family:verdana,geneva,sans-serif;">
         Usage report for pool #POOL#</span></h2>
